--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      docker_username: ${{secrets.DOCKERHUB.USERNAME}}
-      docker_password: ${{secrets.DOCKERHUB.TOKEN}}
+      docker_username: ${{secrets.DOCKERHUB_USERNAME}}
+      docker_password: ${{secrets.DOCKERHUB_TOKEN}}
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
@@ -27,8 +27,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-
-    # Run Checkov for Securit Scans
     - name: Login Dockerhub
       uses: docker/login-action@v3
       with:
