--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,28 +10,19 @@ permissions:
 
 jobs:
   Dockerhub:
-    name: 'Dockerhub environment variables'
+    name: 'Build and Publish Docker Image to Dockerhub'
     runs-on: ubuntu-latest
-
-    env:
-      docker_username: ${{secrets.DOCKERHUB_USERNAME}}
-      docker_password: ${{secrets.DOCKERHUB_TOKEN}}
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
 
     steps:
     # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
+    - name: Checkout Code
       uses: actions/checkout@v4
 
     - name: Login Dockerhub
       uses: docker/login-action@v3
       with:
-        username: docker_username
-        password: docker_password
+        username: ${{secrets.DOCKERHUB_USERNAME}}
+        password: ${{secrets.DOCKERHUB_TOKEN}}
 
     - name: build and push Docker Image
       uses: docker/build-push-action@v5
