--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.1.0",
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
     "next-themes": "^0.4.3",
