--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,6 @@ jobs:
         password: ${{secrets.DOCKERHUB_TOKEN}}
 
     - name: build and push Docker Image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: liberosis8803/w3schoolclone
+      run: |
+        docker build --build-arg FIREBASE_TOKEN=${{secrets.FIREBASE_TOKEN}} -t liberosis8803/w3schoolclone .
+        docker push liberosis8803/w3schoolclone
