--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
         password: ${{secrets.DOCKERHUB_TOKEN}}
 
     - name: build and push Docker Image
+      env:
+        FIREBASE_TOKEN: "${{ secrets.FIREBASE_TOKEN }}"
       run: |
         docker buildx build --build-arg FIREBASE_TOKEN=${{secrets.FIREBASE_TOKEN}} --tag liberosis8803/w3schoolclone .
         docker push liberosis8803/w3schoolclone
