--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 'Build and Publish Docker Image to Dockerhub'
+name: Build and Publish Docker Image to Dockerhub
 
 on:
   push:
@@ -18,20 +18,19 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v4
 
-    - name: Setup Docker
-      uses: docker/setup-buildx-action@v2
-
-    - name: Login Dockerhub
-      uses: docker/login-action@v2
+    # Login to Docker Hub
+    - name: Login to Dockerhub
+      uses: docker/login-action@v3
       with:
-        username: ${{secrets.DOCKERHUB_USERNAME}}
-        password: ${{secrets.DOCKERHUB_TOKEN}}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: build and push Docker Image
-      env:
-        FIREBASE_TOKEN: "${{ secrets.FIREBASE_TOKEN }}"
-      run: |
-        docker buildx build --build-arg FIREBASE_TOKEN=${FIREBASE_TOKEN} \
-        --tag liberosis8803/w3schoolclone:latest \
-        .
-        docker push liberosis8803/w3schoolclone
+    # Build and push Docker image to Docker Hub
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: liberosis8803/w3schoolclone
+        build-args: |
+          FIREBASE_TOKEN=${{ secrets.FIREBASE_TOKEN }}
